--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Tammi Takaya",
   "license": "MIT",
   "dependencies": {
+    "@binance/connector": "^1.11.0",
     "@sendgrid/mail": "^7.7.0",
     "app-root-path": "^3.0.0",
     "async": "^3.2.4",
